--- a/workingtime/templates/base.html
+++ b/workingtime/templates/base.html
@@ -105,7 +105,7 @@
 <body class="text-center">
 
 <main class="form-signin w-100 m-auto">
-    <h1>Posutochka-2023</h1>
+    <h1>workingtime-2023</h1>
     {% block content %}
     {% endblock %}
     <p class="mt-5 mb-3 text-muted">&copy; 2023–{% now 'Y' %}</p>
