--- a/workingtime/templates/workingtime/employee_detail.html
+++ b/workingtime/templates/workingtime/employee_detail.html
@@ -1,28 +1,30 @@
   {% block content %}
-
+<body>
+{{object_list}}
+</body>
 
 <h1> Employee detail </h1>
   <h3> Employee: {{c.name}}</h3>
         <table class="table table-dark table-striped">
-        {%for i in total_time%}
+        {{c}}
             <thead>
                 <tr>
 
                   <th scope="col"> Name</th>
                   <th scope="col">Employer </th>
-
                     <th scope="col">Engaged</th>
-                    <th scope="col">date working hours</th>
+                    <th scope="col">Customuser</th>
                     <th scope="col">Total working hours</th>
 
 
                 </tr>
             </thead>
-                    <td>  {{i.name}}</td>
-                    <td> {{i.date}}</td>
-                    <td> {{i.engaged}}</td>
-                    <td> {{i.total_time}}</td>
-            {% endfor %}
+                    <td>  {{c.name}}</td>
+                    <td> {{c.date}}</td>
+                    <td> {{c.engaged}}</td>
+                    <td> {{c.total_time}}</td>
+                    <td> {{c.total_time}}</td>
+
 
             <td> {{general_total_time}}</td>
 
