--- a/workingtime/templates/workingtime/employee_list.html
+++ b/workingtime/templates/workingtime/employee_list.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     {% load django_tables2 %}
+
     {% render_table table %}
+
+    {% for item in items %}
+    <a href="{% url 'workingtime:delete_item' record.pk %}" type="submit" class="btn"><button>{{ item.id }}</button></a>
+    {{ record.item }}
+    {% endfor %}
+
+
 </head>
 <body>
 
