--- a/workingtime/templates/workingtime/includes/main_menu.html
+++ b/workingtime/templates/workingtime/includes/main_menu.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'workingtime:home' %}">Home</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'workingtime:employee_self' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'workingtime:employee_lst' %}">Employee List</a>
@@ -17,10 +17,10 @@
           <a class="nav-link" href="{% url 'workingtime:timesheet' %}">Timesheets with SingletableView</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'workingtime:timesheet_lst' %}">Timesheets with ListView</a>
+          <a class="nav-link" href="{% url 'workingtime:timesheet_lst_self_time' %}">Timesheets with ListView</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'workingtime:employee_create' %}">Employee create</a>
+          <a class="nav-link" href="{% url 'workingtime:customuser_create' %}">Employee create</a>
         </li>
 
 
