--- a/workingtime/templates/workingtime/timesheet.html
+++ b/workingtime/templates/workingtime/timesheet.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <h2>Timesheet     wt</h2>
+    <h2>Timesheet     List </h2>
 
 
 </head>
@@ -23,7 +23,7 @@
  <table class="table table-dark table-striped">
           <thead>
             <tr>
-                <th scope="col">Details</th>
+                <th scope="col"> </th>
                 <th scope="col">№</th>
                 <th scope="col">   </th>
                 <th scope="col">   </th>
