models def safe updated

--- a/workingtime/templates/workingtime/employee_list2.html
+++ b/workingtime/templates/workingtime/employee_list2.html
@@ -32,7 +32,7 @@
 
                     <td>
                         <a class="btn.btn-default" href="{% url 'workingtime:employee_update' object.pk %}" >Update</a>
-                            <a class="btn.btn-default" href="{% url 'workingtime:employee_create' %}" >Create</a>
+                            <a class="btn.btn-default" href="{% url 'workingtime:customuser_create' %}" >Create</a>
                             <a class="btn.btn-default" href="{% url 'workingtime:employee_delete' object.pk %}" >Delete</a>
                     </td>
                 </tr>
