--- a/workingtime/templates/workingtime/customuser_list2.html
+++ b/workingtime/templates/workingtime/customuser_list2.html
@@ -1,19 +1,6 @@
- {% include 'workingtime/includes/main_menu.html' %}
-{# tutorial/templates/tutorial/people.html #}
-{% load render_table from django_tables2 %}
-{% load bootstrap3 %}
-
-{% if filter %}
-    <form action="" method="get" class="form form-inline">
-        {% bootstrap_form filter.form layout='inline' %}
-        {% bootstrap_button 'filter' %}
-    </form>
-{% endif %}
-{#{% render_table table 'django_tables2/bootstrap.html' %}#}
-<!doctype html>
 <html>
     <head>
-        <h2>List of customusers</h2>
+        <h2>List of customusers 2 </h2>
     </head>
     <body>
     {{object_list}}
