--- a/workingtime/templates/workingtime/employee_detail.html
+++ b/workingtime/templates/workingtime/employee_detail.html
@@ -1,6 +1,8 @@
   {% block content %}
 <body>
 {{object_list}}
+{{total_time}}
+{{cc}}
 </body>
 
 <h1> Employee detail </h1>
@@ -9,11 +11,10 @@
         {{c}}
             <thead>
                 <tr>
-
+                  <th scope="col">Customuser</th>
                   <th scope="col"> Name</th>
                   <th scope="col">Employer </th>
                     <th scope="col">Engaged</th>
-                    <th scope="col">Customuser</th>
                     <th scope="col">Total working hours</th>
 
 
@@ -23,7 +24,7 @@
                     <td> {{c.date}}</td>
                     <td> {{c.engaged}}</td>
                     <td> {{c.total_time}}</td>
-                    <td> {{c.total_time}}</td>
+                    <td> {{total_time}}</td>
 
 
             <td> {{general_total_time}}</td>
