--- a/workingtime/templates/workingtime/employee_lst_filtered.html
+++ b/workingtime/templates/workingtime/employee_lst_filtered.html
@@ -1,6 +1,13 @@
- {% include 'workingtime/includes/main_menu.html' %}
+{% load bootstrap3 %}
+{% include 'workingtime/includes/main_menu.html' %}
 {# tutorial/templates/tutorial/people.html #}
  {% load render_table from django_tables2 %}
+{% if filter %}
+    <form action="" method="get" class="form form-inline">
+        {% bootstrap_form filter.form layout='inline' %}
+        {% bootstrap_button 'filter' %}
+    </form>
+{% endif %}
 <!doctype html>
 <html>
     <head>
