--- a/workingtime/templates/workingtime/includes/main_menu.html
+++ b/workingtime/templates/workingtime/includes/main_menu.html
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'workingtime:employee_self' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'workingtime:employee_lst' %}">Employee List</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'workingtime:employee_self' %}">Employee List</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'workingtime:timesheet' %}">Timesheets with SingletableView</a>
