--- a/workingtime/templates/workingtime/timesheets_without_tables2.html
+++ b/workingtime/templates/workingtime/timesheets_without_tables2.html
@@ -6,8 +6,8 @@
 
 </head>
 <body>
-
 {{ tt }}
+
 
 </body>
     <body>
@@ -15,33 +15,33 @@
      <table class="table table-dark table-striped">
               <thead>
                 <tr>
-                    <th scope="col">Details</th>
-                    <th scope="col">Timesheet №</th>
-                    <th scope="col"> Date  </th>
-                    <th scope="col"> Entry  </th>
-                    <th scope="col"> Start lunch  </th>
-                    <th scope="col"> End lunch  </th>
-                    <th scope="col"> Working day completed</th>
-                    <th scope="col"> Self user concerned</th>
-                    <th scope="col">  Total time  </th>
-                    <th scope="col"> General total time  </th>
+                    <th scope="col">Detail</th>
+                     <th scope="col">id</th>
+                    <th scope="col">status_work</th>
+                    <th scope="col">employee №</th>
+                    <th scope="col"> datetime_start  </th>
+                    <th scope="col"> datetime_complete  </th>
+                    <th scope="col"> time_break  </th>
+                    <th scope="col"> Self email  </th>
+                    <th scope="col"> total_time  </th>
 
                 </tr>
               </thead>
 
-               {% for object in tt %}
+               {% for object in total_time %}
                     <tr>
                         <td>
                         <a class="btn btn-outline-light w-50" href="{% url 'workingtime:timesheet_detail' object.pk %}"></a>
                         </td>
                         <td>{{object.id}}</td>
-                        <td> {{ object.date }} </td>
-                        <td> {{ object.entry }} </td>
-                        <td> {{ object.lunch }} </td>
-                        <td> {{ object.lunch_end }} </td>
-                        <td> {{ object.out }} </td>
+                        <td> {{ object.status_work }} </td>
+                        <td> {{ object.employee }} </td>
+                        <td> {{ object.datetime_start }} </td>
+                        <td> {{ object.datetime_complete }} </td>
+                        <td> {{ object.time_break }} </td>
                         <th scope="col">  {{employee_name}} </th>
-                        <td> {{ object.total_time }} </td>
+
+                        <td> {{ object.ttt }} </td>
                         <th scope="col">  {{general_total_time}} </th>
                     </tr>
                {% endfor %}
